Масштабное обновление, банкир-панель пополнение и прочие исправления 1.0

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@twa-dev/sdk": "^8.0.2",
+    "@vercel/analytics": "^1.5.0",
     "@yandex/smart-captcha": "2.7.0",
     "@yudiel/react-qr-scanner": "^2.3.1",
     "aos": "^2.3.4",
@@ -58,7 +60,7 @@
     "react-slick": "^0.30.3",
     "react-spinners": "^0.17.0",
     "react-yandex-metrika": "^2.6.0",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.4",
     "slick-carousel": "^1.8.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
